{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Interactions",
            "id": "d5a5a998-1fe4-4f4e-a52f-7d34038501e5",
            "actions": [
                {
                    "name": "PrimaryFingerTouch",
                    "type": "Button",
                    "id": "5718b6b2-d1c8-4f68-a3df-b658bb94e923",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "fa0a1a5c-9113-4597-b688-41d2f82ccf0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f936750-4e48-41f5-9584-1eb75d2add11",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryFingerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8208643-f434-4e01-a295-9d52981d51a7",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": []
        }
    ]
}